--- a/style.css
+++ b/style.css
@@ -150,3 +150,32 @@
     margin-left: 2px;
     width: 200px;
 }
+
+/* Estilos predeterminados para el párrafo */
+p {
+    font-size: 20px;
+    color: black;
+}
+  
+/* Media query: cambia el tamaño del texto para pantallas más pequeñas (móviles) y también aplica en pantallas más grandes (ordenadores) */
+@media (mix-width: 1024px){
+    p {
+      font-size: 14px;
+    }
+}
+@media (max-width: 1023px) and (min-width: 768px){
+    p {
+      font-size: 14px;
+    }
+    img {
+        width: 80%; /* Cambia el ancho de la imagen para dispositivos móviles */
+    }
+}
+@media (max-width: 767px) and (min-width: 320px){
+    p {
+      font-size: 14px;
+    }
+    img {
+        width: 80%; /* Cambia el ancho de la imagen para dispositivos móviles */
+    }
+}
